@@ -31,6 +31,7 @@ NEW CHANGES:
              (+) move cdrom_id to separate module udev;
              (+) move v4l_id to separate module udev;
              (+) move accelerometer to separate module udev;
+             (+) move mtd_probe to separate module udev;
         * tests:
              (+) move test-udev to separate module udev;
              (+) move test-libudev to separate module udev;
